Feature: change code to module
